# flodym

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
examples/: example1.py  example2.ipynb  example2.py  example3.py  example5.py
flodym/: __init__.py  _df_to_flodym_array.py  _df_to_nda.py  config.py  data_reader.py  dimensions.py  flodym_array_helper.py  flodym_arrays.py  flow_helper.py  lifetime_models.py  mfa_definition.py  mfa_system.py  named_dim_array_helper.py  processes.py  stock_helper.py  stocks.py  survival_functions.py  survival_models.py
howtos/: 00_preamble.ipynb  00_preamble.py  01_pydantic_primer.ipynb  01_pydantic_primer.py  02_mfa_system_overview.ipynb  02_mfa_system_overview.py  03_dimensions.ipynb  03_dimensions.py  04_arrays.ipynb  04_arrays.py  05_working_with_mfa_system.ipynb  05_working_with_mfa_system.py  06_stocks.ipynb  06_stocks.py  07_data_input.ipynb  07_data_input.py  08_export_and_plotting.ipynb  08_export_and_plotting.py
paper/: paper.bib  paper.md
scripts/: run_notebooks.py
sodym/: __init__.py  _df_to_nda.py  data_reader.py  dimensions.py  example_objects.py  flow_helper.py  flow_naming.py  mfa_definition.py  mfa_system.py  named_dim_arrays.py  processes.py  stock_helper.py  stocks.py  survival_functions.py
tests/: conftest.py  test_array_plotter.py  test_dimensions.py  test_flodym_arrays.py  test_helpers.py  test_mfa_definition.py  test_mfa_system.py  (+5 more)
(+47 files in other folders)
