[project]
name = "flodym"
version = "0.8.1"
authors = [
    { name = "Jakob Dürrwächter" },
    { name = "Sally Dacie" },
    { name = "Merlin Hosak" },
    { name = "Bennet Weiss" },
    { name = "Leonie Schweiger" },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "PyYAML>=6.0",
    "pandas>=2.0.2",
    "pickle4>=0.0.1",
    "plotly>=5.18.0",
    "pydantic>=2.8.2",
    "openpyxl>=3.1.5",
    "tabulate>=0.9.0",
    "deprecated>=1.3.1",
]

[project.optional-dependencies]
examples = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]
tests = [
    "pytest>=8.3.2",
    "polyfactory>=2.16.2",
    "ipython>=8.0.0",
    "nbformat>=5.10.4",
]
docs = [
    "sphinx>=7.4.0",
    "sphinx-pydantic>=0.1.1",
    "autodoc-pydantic>=2.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.6",
    "nbsphinx-link>=1.3.1",
    "jupyter>=1.1.1",
    "jupytext>=1.16.4",
]

[dependency-groups]
dev = ["flodym[examples,tests,docs]"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "flodym"
module-root = ""

[tool.black]
line-length = 100
